Preventing dashboard posts from displaying too wide

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -33,11 +33,9 @@
       top: 0;
       left: 0;
     }
-    .poster-details {
+    .poster {
       margin: 0 0 0 65px;
-      overflow: hidden;
-      white-space: nowrap;
-      .poster {
+      .poster-details {
         margin: 10px 0px 0px 0px;
       }
       .post-time {
